<resources>
    <string name="app_name">Occuhelp</string>
    <string name="login">Login</string>
    <string name="nip">NIP</string>
    <string name="password">Kata Sandi</string>
    <string name="lupaSandi">Ubah Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="verificationTextTitle">Masukkan Email untuk Verifikasi</string>
    <string name="verificationTextDescription">Silahkan ketik email Anda pada kolom di bawah ini, agar kami bisa mengirimkan kode verifikasi
    </string>
    <string name="email">Email</string>
    <string name="sendVerification">Kirim Link Verifikasi</string>
    <string name="changePasswordTextTitle">Silahkan Ganti Kata Sandi Anda!</string>
    <string name="changePasswordTextDescription">Identitasmu telah diverifikasi. \nSilahkan masukkan kata sandi yang baru!</string>
    <string name="oldPassword">Kata Sandi Lama</string>
    <string name="newPassword">Kata Sandi Baru</string>
    <string name="confirmPassword">Konfirmasi Kata Sandi Baru</string>
    <string name="updatePassword">Perbarui Kata Sandi</string>
    <string name="updatedPasswordTextTitle">Kata Sandi Diperbarui!</string>
    <string name="updatedPasswordTextDescription">Kata sandi Anda berhasil diperbarui. \nSilahkan Login kembali.</string>
    <string name="telephoneNumber">Nomor Telepon</string>
    <string name="message">Ketik Pesan Anda disini.....</string>
    <string name="send">Kirim</string>
    <string name="report">Report</string>
    <string name="inputDateTitle">Periode Tanggal Input</string>
    <string name="until">Sampai</string>
    <string name="number">No</string>
    <string name="file">File Terunduh</string>
    <string name="date">Tanggal</string>
    <string name="rowNumber">1</string>
    <string name="rowFile">Normal</string>
    <string name="rowDate">13/05/2022</string>
    <string name="detailReport">Lihat Laporan</string>
    <string name="aboutUs">Tentang Kami</string>
    <string name="whatIsOccuHelp">Apa itu OccuHelp?</string>
    <string name="occuHelpIs">OccuHelp adalah platform digital yang memudahkan tenaga kesehatan dalam mengelola data Medical Check-Up pekerja, menawarkan solusi efisien untuk pencatatan dan pemantauan kesehatan pekerja.</string>
    <string name="visi">Visi</string>
    <string name="misi">Misi</string>
    <string name="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit aliquam dolores exercitationem accusamus placeat. Suscipit fugit debitis error tenetur totam.</string>
    <string name="why">Kenapa harus OccuHelp?</string>
    <string name="descriptionOccuHelp">OccuHelp mengatasi tantangan pengelolaan data kesehatan pekerja dengan solusi teknologi praktis, memungkinkan tenaga medis fokus pada perawatan pasien tanpa khawatir administrasi data.</string>
    <string name="ourService">Layanan Kami</string>
    <string name="ourServiceTitle">Apa itu Medical Check-Up (MCU) <font color='#217F96'>berbasis</font> Okupasi?</string>
    <string name="ourServiceDescription">MCU (Medical Check-Up) berbasis okupasi adalah pemeriksaan medis untuk memastikan seseorang memiliki kondisi kesehatan yang memadai guna menjalankan tugas pekerjaan secara aman dan efektif. Pemeriksaan ini disesuaikan dengan jenis pekerjaan, mengingat tiap pekerjaan memiliki risiko kesehatan berbeda.</string>
    <string name="physicalExamination">Pemeriksaan Fisik</string>
    <string name="psychologyCheckup">Pemeriksaan Psikologi</string>
    <string name="specificHealthCheck">Pemeriksaan Kesehatan Spesifik</string>
    <string name="periodicHealthChecks">Pemeriksaan Kesehatan Berkala</string>
    <string name="tips">Tips untuk Memaksimalkan MCU Berkala:</string>
    <string name="firstTips">1. Melakukan pemeriksaan secara rutin</string>
    <string name="secondTips">2. Mengikuti anjuran kesehatan dari dokter</string>
    <string name="thirdTips">3. Memberi informasi mengenai riwayat kesehatan kepada dokter Anda</string>
    <string name="fourthTips">4. Menjaga pola makan dan kehidupan yang sehat</string>
    <string name="patientDetail">Detail Pasien</string>
    <string name="patientName">Miyamura Izumi</string>
    <string name="biodata">#Biodata Pasien</string>
    <string name="dateOfInspectionTitle">Tanggal Pemeriksaan</string>
    <string name="dateOfInspectionDescription">29 Maret 2025</string>
    <string name="medicalRecordNumber">Nomor Rekam Medis</string>
    <string name="medicalRecordNumberDescription">RM-20250329001</string>
    <string name="patientNumber">Nomor Pasien</string>
    <string name="patientNumberDescription">PSN-882017465</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="genderDescription">Perempuan</string>
    <string name="age">Umur</string>
    <string name="ageDetail">28 Tahun</string>
    <string name="birthDatePlace">Tempat Tanggal Lahir</string>
    <string name="birthDatePlaceDescription">Jakarta, 15 Januari 1997</string>
    <string name="address">Alamat</string>
    <string name="addressDescription">Jl. Cempaka Putih Timur No. 10, Jakarta</string>
    <string name="mcuResult">Lihat Hasil MCU</string>
    <string name="patientMcuResult">Hasil MCU Pasien</string>
    <string name="category">Kategori</string>
    <string name="analysisResult">Hasil Analisa</string>
    <string name="seeDetails">Lihat Detail</string>
    <string name="resultDetailsMcu">Detail Hasil MCU</string>
    <string name="checkDate">Tgl. Periksa</string>
    <string name="checkDateDescription">20/11/2023</string>
    <string name="workUnit">Unit Kerja</string>
    <string name="workUnitDescription">Instalasi Farmasi</string>
    <string name="typeOfInspection">Jenis Pemeriksaan</string>
    <string name="typeOfInspectionDescription">Medical Check-Up</string>
    <string name="patient">Pasien</string>
    <string name="find">Cari....</string>
    <string name="previous">Sebelumnya</string>
    <string name="next">Selanjutnya</string>
    <string name="number1">1</string>
    <string name="dataResultMcu">Data Hasil MCU</string>
    <string name="recap">Rekapitulasi</string>
    <string name="select">Pilih</string>
    <string name="sum">Jumlah</string>
    <string name="welcome">Selamat Datang,\ndr. Ayu Lestari!</string>
    <string name="dashboard">Dashboard</string>
    <string name="mcuDashboard">Hasil MCU</string>
    <string name="sidebarName">dr. Ayu Lestari, Sp.KJ</string>
    <string name="contact">Kontak</string>
</resources>
