<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1,2,3"
    android:id="@+id/dataTableReport">

    <TableRow
        android:id="@+id/dataRow"
        android:background="@color/tableColor"
        >

        <TextView
            android:id="@+id/rowNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/rowNumber"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rowFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/rowFile"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rowDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/rowDate"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </TableRow>
</TableLayout>