<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/patientNumberDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/patientNumberDescription"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/iconInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@null"
            android:padding="0dp"
            android:src="@drawable/icon_info"
            app:layout_constraintBottom_toBottomOf="@id/patientNumberDescription"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/patientNumberDescription" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/patientNumberDescription" />

        <TextView
            android:id="@+id/patientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunitobold"
            android:text="@string/patientName"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/checkDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkDate"
            android:textSize="11sp"
            android:fontFamily="@font/nunitobold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/patientName"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/checkDateDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkDateDescription"
            android:textSize="11sp"
            android:fontFamily="@font/nunitoregular"
            app:layout_constraintTop_toTopOf="@id/checkDate"
            app:layout_constraintEnd_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/workUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workUnit"
            android:textSize="11sp"
            android:fontFamily="@font/nunitobold"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/checkDateDescription"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/workUnitDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workUnitDescription"
            android:textSize="11sp"
            android:fontFamily="@font/nunitoregular"
            app:layout_constraintTop_toTopOf="@id/workUnit"
            app:layout_constraintEnd_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/typeOfInspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfInspection"
            android:textSize="11sp"
            android:fontFamily="@font/nunitobold"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/workUnitDescription"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/typeOfInspectionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfInspectionDescription"
            android:textSize="11sp"
            android:fontFamily="@font/nunitoregular"
            app:layout_constraintTop_toTopOf="@id/typeOfInspection"
            app:layout_constraintEnd_toStartOf="@id/guideline2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>