<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".resultdetails.ResultDetailsActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:backgroundTint="@null"
        android:padding="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />

    <TextView
        android:id="@+id/resultDetailsMcu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/resultDetailsMcu"
        android:fontFamily="@font/nunitobold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        />

    <TextView
        android:id="@+id/patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patientName"
        android:textSize="16sp"
        android:paddingHorizontal="8dp"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline"/>

    <TextView
        android:id="@+id/patientMedicalRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_radius"
        android:backgroundTint="@color/biodataColor"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        android:text="@string/medicalRecordNumberDescription"
        android:textSize="11sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/patientName"
        app:layout_constraintBottom_toBottomOf="@id/patientName"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/patientMedicalRecord"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TableLayout
        android:id="@+id/tableResultDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:divider="@color/black"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline6">

        <TableRow
            android:id="@+id/tableHead"
            android:background="@color/tableSecondColor">

            <TextView
                android:id="@+id/tableHeadNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tableHeadCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tableHeadResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/analysisResult"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/layout_detail_report"
            tools:itemCount="9"
            />

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>